Update rps to use GUI

--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>Odin-Rock Paper Scissors</title>
 </head>
 <body>
-    <p>Implemented in console</p>
+    <h1>Odin's Rock Paper Scissors</h1>
+    <p>First to 5 wins! </p>
+    <div id="containerRPS">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="containerResults">
+        <p id="paraRoundResults"></p>
+        <p id="paraScorePlayer"></p>
+        <p id="paraScoreComputer"></p>
+    </div>
+
     <script src="rps.js"></script>
 </body>
 </html>
